force-app/main/default/objects/RepairPackageItem__c/RepairPackageItem__c.object-meta.xml
<CustomObject>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/2/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Repair Package Item</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repair Package Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>