force-app/main/default/objects/RepairPackageItem__c/fields/DiscountAmounts__c.field-meta.xml
<CustomField>
    <fullName>DiscountAmounts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/3/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Discount Amounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>