force-app/main/default/objects/RepairPackageItem__c/fields/DiscountRates__c.field-meta.xml
<CustomField>
    <fullName>DiscountRates__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/3/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Discount Rates</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>