force-app/main/default/objects/RepairPackageItem__c/fields/DiscountType__c.field-meta.xml
<CustomField>
    <fullName>DiscountType__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rate</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>