force-app/main/default/objects/RepairPackageItem__c/fields/DuplicatedUse__c.field-meta.xml
<CustomField>
    <fullName>DuplicatedUse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Duplicated Use</label>
    <type>Checkbox</type>
</CustomField>