force-app/main/default/objects/RepairPackageItem__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>