force-app/main/default/objects/RepairPackageItem__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>