force-app/main/default/objects/RepairPackageItem__c/fields/fm_LaborCode__c.field-meta.xml
<CustomField>
    <fullName>fm_LaborCode__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <formula>IF(ISPICKVAL(LineItemType__c, &apos;Labor&apos;) , fm_ProductCode__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labor Code</label>
    <type>Text</type>
</CustomField>