force-app/main/default/objects/RepairPackageItem__c/fields/fm_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>fm_ProductCode__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>