force-app/main/default/objects/RepairPackageItem__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>