force-app/main/default/objects/RepairPackageItem__c/fields/LineItemType__c.field-meta.xml
<CustomField>
    <fullName>LineItemType__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Line Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Part</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>