force-app/main/default/objects/RepairPackageItem__c/fields/MNTH_LIMIT_FROM__c.field-meta.xml
<CustomField>
    <fullName>MNTH_LIMIT_FROM__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>MONTH LIMIT - FROM</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>