force-app/main/default/objects/RepairPackageItem__c/fields/MOD_DT__c.field-meta.xml
<CustomField>
    <fullName>MOD_DT__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>LAST MODIFIED DATE</label>
    <type>DateTime</type>
</CustomField>