force-app/main/default/objects/RepairPackageItem__c/fields/ODMT_TYP__c.field-meta.xml
<CustomField>
    <fullName>ODMT_TYP__c</fullName>
    <label>OLDMT TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>