force-app/main/default/objects/RepairPackageItem__c/fields/PART_NO__c.field-meta.xml
<CustomField>
    <fullName>PART_NO__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Part No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>