force-app/main/default/objects/RepairPackageItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <inlineHelpText>Required if Line Item Type is Labor or Part</inlineHelpText>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Country__c</field>
            <operation>equals</operation>
            <valueField>$User.Country__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Repair Package Item</relationshipLabel>
    <relationshipName>Repair_Package_Item</relationshipName>
    <type>Lookup</type>
</CustomField>