force-app/main/default/objects/RepairPackageItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Quantity</label>
    <precision>4</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>