force-app/main/default/objects/RepairPackageItem__c/fields/RepairPackage__c.field-meta.xml
<CustomField>
    <fullName>RepairPackage__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Repair Package</label>
    <referenceTo>RepairPackage__c</referenceTo>
    <relationshipLabel>Repair Package Item</relationshipLabel>
    <relationshipName>RepairPackageItem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>