force-app/main/default/objects/RepairPackageItem__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>