force-app/main/default/objects/RepairPackageItem__c/fields/SVC_OP_CD__c.field-meta.xml
<CustomField>
    <fullName>SVC_OP_CD__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/4/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>FREE SERVICE OP CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>