force-app/main/default/objects/RepairPackageItem__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <defaultValue>CASE(  $User.Country  ,&quot;Germany&quot;,19/100,
&quot;United Kingdom&quot;,20/100,
&quot;Switzerland&quot;,77/1000,0)</defaultValue>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/10/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Tax</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>