force-app/main/default/objects/RepairPackageItem__c/fields/TotalNetCost__c.field-meta.xml
<CustomField>
    <fullName>TotalNetCost__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/10/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <formula>TotalPrice__c  +  TotalTax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Net Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>