force-app/main/default/objects/RepairPackageItem__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/10/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <formula>UnitPrice__c  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>