force-app/main/default/objects/RepairPackageItem__c/fields/TotalTax__c.field-meta.xml
<CustomField>
    <fullName>TotalTax__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/10/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <formula>Tax__c  *  TotalPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>