force-app/main/default/objects/RepairPackageItem__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <description>Created By : Nagendra Lagisetty
Created Date: 11/10/2020
User Story:GD-1228
Purpose: Basic level object</description>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>