force-app/main/default/objects/RepairPackageItem__c/recordTypes/Labor.recordType-meta.xml
<RecordType>
    <fullName>Labor</fullName>
    <active>true</active>
    <label>Labor</label>
</RecordType>